Fix logo alignment

--- a/_sass/maxcontent.scss
+++ b/_sass/maxcontent.scss
@@ -125,11 +125,11 @@
 
   .sponsor {
     flex: 1 0 auto;
+    text-align: center;
 
     img {
       display: inline-block;
       vertical-align: middle;
-      width: 100%;
       height: 2.5em;
     }
   }
